# pielang-rs

./: Cargo.toml  README.md
crates/pielang-macros/: Cargo.toml
pielang/: Cargo.toml  build.rs
pielang-cli/: Cargo.toml
pielang-cli/src/: main.rs
pielang/src/: ast.rs  core.rs  core_ast.rs  lib.rs  scope_check.rs  syntax.lalrpop  test.rs  type_check.rs  utils.rs
pielang/src/snapshots/: pielang__test__check_name_(check-same Nat 0 0).snap  pielang__test__check_name_(check-same a b c d).snap  pielang__test__check_name_(check-same a b).snap  pielang__test__check_name_(check-same a).snap  pielang__test__check_name_(claim U Nat).snap  pielang__test__check_name_(claim claim Nat).snap  pielang__test__check_name_(claim x Nat).snap  pielang__test__check_name_(claim x y z).snap  pielang__test__check_name_(claim x).snap  pielang__test__check_name_(define check-same 0).snap  pielang__test__check_name_(define define 0).snap  pielang__test__check_name_(define f (Pi ((U Nat)) Atom)).snap  pielang__test__check_name_(define f (Pi ((x Nat)(U Nat)) Atom)).snap  pielang__test__check_name_(define f (Sigma ((U Nat)) Atom)).snap  pielang__test__check_name_(define f (Sigma ((x Nat)(U Nat)) Atom)).snap  pielang__test__check_name_(define f (λ (Pair) 0)).snap  pielang__test__check_name_(define f (λ (U) 0)).snap  pielang__test__check_name_(define f (λ (claim) 0)).snap  pielang__test__check_name_(define f (λ (define) 0)).snap  pielang__test__check_name_(define f (λ (sole) 0)).snap  pielang__test__check_name_(define x 0).snap  pielang__test__check_name_(define x y z).snap  pielang__test__check_name_(define x).snap  pielang__test__check_synthesize_'a.snap  pielang__test__check_synthesize_((the (→ Nat Atom Nat) (λ (x y) x)) 1 'a).snap  pielang__test__check_synthesize_((the (→ Nat Nat Nat) (λ (x y) x)) 0 1).snap  pielang__test__check_synthesize_(add1 zero).snap  pielang__test__check_synthesize_(car (the (Pair Atom Nat) (cons 'a 0))).snap  pielang__test__check_synthesize_(cdr (the (Pair Atom Nat) (cons 'a 0))).snap  pielang__test__check_synthesize_(quote atom).snap  pielang__test__check_synthesize_(the (-> (-> (-> Nat Nat) Nat Nat) Nat Nat) (lambda (f x) (f (lambda (y) y) x))).snap  pielang__test__check_synthesize_(the (-> (Pair Atom Nat) (Pair Atom Nat)) (λ (p) (cons (car p) (cdr p)))).snap.new  pielang__test__check_synthesize_(the (-> Nat Nat) (lambda (x) ((the (-> Atom Nat) (lambda (y) (add1 x))) 'a))).snap  pielang__test__check_synthesize_(the (-> Nat Nat) (lambda (x) ((the (-> Atom Nat) (lambda (y) 0)) 'a))).snap  pielang__test__check_synthesize_(the (Pair Nat Atom) (cons 0 'a)).snap  pielang__test__check_synthesize_(the (→ Absurd Nat) (λ (nope) (ind-Absurd (the Absurd nope) Nat))).snap  pielang__test__check_synthesize_(the (→ Absurd Nat) (λ (nope) (ind-Absurd nope Nat))).snap  pielang__test__check_synthesize_(the (→ Nat Nat Nat) (λ (x y) x)).snap  pielang__test__check_synthesize_(the (→ Nat Nat) (λ (x) (add1 x))).snap  pielang__test__check_synthesize_(the (→ Nat Nat) (λ (x) x)).snap  (+71 more)
src/: ast.rs  core_ast.rs  lib.rs  scope_check.rs  syntax.lalrpop  test.rs  type_check.rs  utils.rs
src/snapshots/: pielang__test__check_synthesize_(add1 zero).snap  pielang__test__check_synthesize_(the (→ Absurd Nat) (λ (nope) (ind-Absurd (the Absurd nope) Nat))).snap  pielang__test__check_synthesize_(the (→ Absurd Nat) (λ (nope) (ind-Absurd nope Nat))).snap  pielang__test__check_synthesize_(the Absurd 0).snap  pielang__test__check_synthesize_(the Atom 'a).snap  pielang__test__check_synthesize_(the Nat 'a).snap  pielang__test__check_synthesize_(the Nat (add1 zero)).snap  pielang__test__check_synthesize_(the Nat 114).snap  pielang__test__check_synthesize_(the Trivial 'a).snap  pielang__test__check_synthesize_(the Trivial 0).snap  pielang__test__check_synthesize_(the U Trivial).snap  pielang__test__check_synthesize_sole.snap  pielang__test__parse_expression_'  btom.snap  (+25 more)
(+1 files in other folders)
