[package]
name = "pielang"
version = "0.1.0"
authors = ["chirsz"]
edition = "2018"
description = "The interpreter for Pie, a dependent type language"
license = "AGPL-3.0"
keywords = ["programming-language", "interpreter", "pie", "pielang"]
categories = ["command-line-utilities", "compilers"]
# readme = 
# repository = 

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }

# TODO: manage binary-only dependencies
[dependencies]
lalrpop-util = "0.19"
structopt = "0.3"
rustyline = "7.1"
fehler = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
