[package]
name = "pielang-cli"
description = "Pie language interpreter CLI"
keywords = ["programming-language", "interpreter", "pie", "pielang"]
categories = ["command-line-utilities", "compilers"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pielang = { version = "0.1.0", path = "../pielang" }
structopt = "0.3"
rustyline = "18.0"
anyhow = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }

[[bin]]
name = "pie"
path = "src/main.rs"
