[package]
name = "pielang"
description = "RIIR Pie, a dependent type language"
keywords = ["programming-language", "interpreter", "pie", "pielang"]
categories = ["compilers"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
lalrpop = "0.23.1"

[dependencies]
lalrpop-util = "0.23.1"
thiserror = "1.0"
log = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
insta = { version = "1.48.0", features = ["yaml"] }
anyhow = { workspace = true }
